Проект 1_multicalculators_JavaScript Исправлены ошибки в файлах (notepadScript.js) в соответствии с инструкциями ESLint Локально изменены файлы (notepadIndex.htm, notepadStyle.css)
Project 1_multicalculators_JavaScript
Fixed file errors (notepadScript.js), according to the instructions of ESLint
Locally modified files (notepadIndex.htm, notepadStyle.css)

--- a/6_11_notepadPage/notepadIndex.htm
+++ b/6_11_notepadPage/notepadIndex.htm
@@ -67,7 +67,7 @@
     </nav>
   </header>
   <!-----MAIN--------------------------------------------------------------------------->
-  <main class="main__flex-container">
+  <main class="main__flex-container" style="background-image: url('/5_img/5_11_notepadImg/bird1.svg')">
     <!-- /*_______________main__header-block____________*/ -->
     <div class="main__header-block">
       <h2>Блокнот</h2>
