--- a/6_0_mainPage/mainIndex.html
+++ b/6_0_mainPage/mainIndex.html
@@ -478,7 +478,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
       © 2022 Copyright:
-      <a class="text-reset fw-bold" href="#!">WebsiteDesign.ru</a>
+      <a class="text-reset fw-bold" href="https://github.com/MikaBerza">MikaBerza</a>
     </div>
     <!-- Copyright -->
   </footer>
